<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_home">Home </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home_second">Home Second</string>
    <string name="menu_home">Menu Home</string>

    <!--    hint-->
    <string name="email">Email</string>
    <string name="fullname">Full Name</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password confirm</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="job">Job</string>
    <string name="description">Description</string>
    <string name="number_phone">Number phone</string>
    <string name="full_name">Full name</string>
    <string name="newpassword">New Password</string>
    <string name="newpasswordconfirm">New Password Confirm</string>

    <!--    button-->
    <string name="btn_login">Log in</string>
    <string name="btn_register">Register</string>
    <string name="btn_send">Send</string>
    <string name="btn_save">Save</string>
    <string name="btn_verify">Verify</string>
    <!--    textview-->
    <string name="create_account">Create account</string>
    <string name="forget_password">Forget password</string>
    <string name="login_with_google">Login with Google</string>


    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="edit">Edit</string>
    <string name="info">Info</string>
    <string name="full_name_user">Tạ Thị Tú Phi</string>
    <string name="job_user">Student</string>
    <string name="email_user">tatuphi@gmail.com</string>
    <string name="birthday_user">22/12/1998</string>
    <string name="phone_number_user">0334994998</string>
    <string name="gender_user">Female</string>
    <string name="description_user">This is my description </string>
    <string name="edit_info">Edit info</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="payment_history">Payment history</string>
    <string name="chat_admin">Chat admin</string>
    <string name="qrcode">QRCode</string>
    <string name="scan_qrcode">Scan QRCode</string>
    <string name="change_password">Change password</string>
    <string name="filter">Filter</string>
    <string name="card_info">Card info</string>
    <string name="add_card">Add card</string>
    <string name="bank_account">Bank account</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="noti_content">ABC approved you to take part the Music Festival</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hashString">**** **** **** ****</string>

    <!--    google maps api key-->
    <!--    <string name="google_maps_key">AIzaSyCpffFx5sZstG6aclYoEnodK4Nj5DF14F4</string>-->
    <string name="title_activity_maps">Map</string>
    <string name="server_client_id">625463994838-h0qjq4cvc10tr2msqf1o9ebbe66kfmoh.apps.googleusercontent.com</string>

</resources>
