<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.myapplication.activity.Login">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/toolbar_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:gravity="center"
                    android:text="@string/edit"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:onClick="edit_profile"
                    android:clickable="true"
                    android:textStyle="bold"
                    tools:ignore="OnClick"
                    android:focusable="true" />

                <ImageButton
                    android:id="@+id/toolbar_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="-30dp"
                    android:foregroundGravity="center"
                    android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/info"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </com.google.android.material.appbar.MaterialToolbar>



    </com.google.android.material.appbar.AppBarLayout>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/black"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/avatar"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/full_name_user"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:textSize="30sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:drawableStart="@mipmap/icons_mail"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:drawablePadding="10dp"
            android:inputType="textEmailAddress"
            android:text="@string/email_user"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/birthday"
            android:textColor="@color/white"
            android:drawableStart="@mipmap/icons_birthday"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/txt_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:drawablePadding="10dp"
            android:inputType="date"
            android:text="@string/birthday_user"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/number_phone"
            android:textColor="@color/white"
            android:drawableStart="@mipmap/icons_phone"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/txt_numberPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:drawablePadding="10dp"
            android:inputType="phone"
            android:text="@string/phone_number_user"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:drawableStart="@mipmap/icons_gender"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/txt_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:drawablePadding="10dp"
            android:text="@string/gender_user"
            android:textAllCaps="true"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/job"
            android:textColor="@color/white"
            android:drawableStart="@mipmap/icons_job"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/txt_job"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:drawablePadding="10dp"
            android:text="@string/job_user"
            android:textColor="@color/white" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/description"
            android:textColor="@color/white"
            android:drawableStart="@mipmap/icons_note"
            android:drawablePadding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:drawablePadding="10dp"
            android:text="@string/description_user"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>





</androidx.coordinatorlayout.widget.CoordinatorLayout>