<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    android:gravity="bottom"
    android:padding="20dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shapeinput"
        android:drawableLeft="@drawable/ic_mail_outline_white_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_lock_outline_white_24dp"
        app:startIconTint="@color/white"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapeinput"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"
            android:inputType="textPassword"
            android:padding="15dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shapebutton"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:onClick="login"
        android:clickable="true"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txt_loginGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:buttonTint="@color/white"
        android:text="@string/login_with_google"
        android:textColor="#198CE8" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/txt_createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/white"
            android:text="@string/create_account"
            android:clickable="true"
            android:onClick="create_account"
            android:textColor="@color/white"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/txt_forgetPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="6dp"
            android:gravity="right"
            android:padding="4dp"
            android:text="@string/forget_password"
            android:onClick="forget_password"
            android:clickable="true"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>

