<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background1"
    android:orientation="vertical"
    android:gravity="bottom"
    android:padding="20dp"
    android:fitsSystemWindows="true"
    tools:context="com.example.myapplication.activity.Register">
    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:autofillHints=""
        android:background="@drawable/shapeinput"
        android:drawableStart="@drawable/ic_mail_outline_white_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/input_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shapeinput"
        android:drawableStart="@drawable/ic_person_outline_white_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/fullname"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_lock_outline_white_24dp"
        app:startIconTint="@color/white"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapeinput"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"
            android:inputType="textPassword"
            android:padding="15dp"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_lock_outline_white_24dp"
        app:startIconTint="@color/white"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/input_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shapeinput"
            android:hint="@string/password_confirm"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textColorHighlight="@color/white"
            android:inputType="textPassword"
            android:padding="15dp"
            android:autofillHints="" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shapebutton"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:textAllCaps="false"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        android:focusable="true" />

</LinearLayout>

